networkpolicies/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jino
  labels:
    project: a
---
apiVersion: v1
kind: Namespace
metadata:
  name: eino
  labels:
		project: b
