networkpolicies/example-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: jino
  labels:
    env: prod
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx1
  namespace: jino
  labels:
    env: prod
spec:
  containers:
  - image: nginx
    name: nginx1
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd
  namespace: eino
  labels:
    env: test
spec:
  containers:
  - image: httpd
    name: httpd
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd1
  namespace: eino
  labels:
    env: test1
spec:
  containers:
  - image: httpd
    name: httpd1
    ports:
    - containerPort: 80
