networkpolicies/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: jino
spec:
  selector:
    env: prod
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001

---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: eino
  labels:
    role: ht
spec:
  selector:
    env: test
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32002
