networkpolicies/policy.yaml
---
# First set default default deny policy into jino namespace.
# Because Bydefault allow all traffics from pods.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: jino
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: public-ingress
  namespace: jino
spec:
  podSelector:
    matchExpressions:
      - {key: env, operator: In, values: [prod]}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - {}  # Input from all ACCEPTED
  egress:
    - {}  # Prod name of the pod COMMUNICATED outside!!!
